<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.c_ronaldo.we_finder.SignUpActivity">

    <LinearLayout
        android:id="@+id/profile_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            app:srcCompat="@drawable/material_avatar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/take_photo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onTakePhotoClicked"
                android:text="@string/take_photo"
                app:srcCompat="@drawable/ic_add_a_photo_black_24dp"/>


            <ImageButton
                android:id="@+id/select_photo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onUploadPortraitClicked"
                android:text="@string/upload_photo"
                app:srcCompat="@drawable/ic_photo_size_select_actual_black_24dp" />


        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_info"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_name"
            android:inputType="textPersonName"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/repeat_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/repeat_password"
            android:inputType="textPassword"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/spinners"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/padding_vertical">

        <LinearLayout
            android:id="@+id/year_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/birth_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/padding_horizontal_small"
                android:text="@string/year_of_birth"
                android:textSize="@dimen/text_medium"/>

            <Spinner
                android:id="@+id/year_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/padding_horizontal_small" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/zodiac_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/zodiac_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/padding_horizontal_small"
                android:text="@string/zodiac_sign"
                android:textSize="@dimen/text_medium"/>

            <Spinner
                android:id="@+id/zodiac_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/padding_horizontal_small"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gender_info"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/padding_horizontal_small"
                android:text="@string/gender"
                android:textSize="@dimen/text_medium"/>

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/padding_horizontal_small"/>

        </LinearLayout>

    </LinearLayout>




</LinearLayout>
