<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.c_ronaldo.we_finder.ChatActivity">

    <ListView
        android:id="@+id/messageListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:dividerHeight="@dimen/divider_height"
        android:layout_marginBottom="@dimen/padding_vertical"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="8"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/messageText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/message_here"
            android:textSize="@dimen/text_small"
            android:inputType="textCapSentences"
            tools:ignore="NestedWeights,SmallSp" />

        <ImageButton
            android:id="@+id/send_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:contentDescription="@string/send_button"
            android:onClick="sendMessageClicked"
            android:text="@string/send"
            app:srcCompat="@drawable/ic_send_black_24dp" />

    </LinearLayout>


</LinearLayout>
